Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78240

Debug version of QCoreTextFontDatabase::fallbacksForFamily on Mac OS X 10.15(Beta)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.7, 5.14.0 Alpha
    • 5.12.2
    • QPA
    • None
    • macOS
    • 7f0faddf9fe25adc0a3e0827e21c030d6a7a1035 (qt/qtbase/5.14) 1e6a680f8399ed3914a80da2f3a7cb3ef30e4a75 (qt/qtbase/5.12)

      #1. The root cause is missing `/System/Library/Frameworks/ApplicationServices.framework/Frameworks/CoreText.framework/Resources/DefaultFontFallbacks.plist` file in Mac OS X 10.15(Beta).

      #2: After loading this file `DefaultFontFallbacks.plist` (from `qt5/qtbase/src/platformsupport/fontdatabases/mac/qcoretextfontdatabase.mm`)
      into `fallbackDict`,  `fallbackDict` becomes `nil` on Mac OS X 10.15(Beta).

      #3: `Q_ASSERT` raises SIGABRT signal in Debug build. 

       

       

      I tested with official Qt binaries with maps.app example on Mac OS X 10.15(Beta), it crashes in the same place.

       

        1. CrashInvestigateMemo.png
          1.25 MB
          Kyaw Kyaw Win
        For Gerrit Dashboard: QTBUG-78240
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            kyawkyawwin Kyaw Kyaw Win
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes